--- a/package.json
+++ b/package.json
@@ -3,14 +3,14 @@
   "version": "3.6.4",
   "description": "Build beautiful in-app flows with no code and deliver them instantly to your app. http://customer.io",
   "private": false,
-  "browser": "dist/gist.min.js",
-  "type": "module",
   "scripts": {
     "start": "npm-run-all --parallel watch:server watch:build",
     "build:prod": "webpack -p --mode=production -o dist/gist.min.js",
     "watch:build": "webpack --watch --progress --mode=development",
     "watch:server": "http-server"
   },
+  "browser": "dist/gist.min.js",
+  "exports": "./src/index.js",
   "author": "Customer.io (https://customer.io)",
   "license": "SEE LICENSE IN LICENSE",
   "devDependencies": {
